--- a/index.html
+++ b/index.html
@@ -55,15 +55,11 @@
          <div class="">
            <h3><span>Title</span></h3>
          </div>
-
-
        </article>
        <article class="">
          <div class="">
            <h3><span>Title 2</span></h3>
          </div>
-
-
        </article>
        <article class="">
          <div class="">
@@ -72,21 +68,124 @@
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
-
-
        </article>
      </div>
-
-
-
    </section>
    <section id="prices">
-
+       <div class="container">
+           <div class="prices-head">
+               <span>Cennik</span>
+           </div>
+           <div class="offers">
+               <div class="left-table">
+                   <div class="big-circle"></div>
+                   <div class="small-circle"></div>
+                   <div class="title">
+                       <p>BASIC PLAN</p>
+                   </div>
+                   <div class="price-circle">
+                       <p class="price">85<span>99</span></p>
+                       <p class="time">PLN/MSC</p>
+                   </div>
+                   <div class="list">
+                       <ul class="options">
+                           <li>Zakup towaru + dowóz</li>
+                           <li>Serwis</li>
+                       </ul>
+                   </div>
+                   <div class="button-join">
+                       <a href="#" type="submit">dołącz</a>
+                   </div>
+               </div>
+               <div class="middle-table">
+                   <div class="big-circle"></div>
+                   <div class="small-circle"></div>
+                   <div class="title">
+                       <p>STANDARD PLAN</p>
+                   </div>
+                   <div id="middle" class="price-circle">
+                       <p class="price">95<span>99</span></p>
+                       <p class="time">PLN/MSC</p>
+                   </div>
+                   <div class="list">
+                       <ul class="options">
+                           <li>Zakup towaru + dowóz</li>
+                           <li>Serwis</li>
+                           <li>Gwarancja 5 lat</li>
+                       </ul>
+                   </div>
+                   <div class="button-join">
+                       <a href="#" type="submit">dołącz</a>
+                   </div>
+               </div>
+               <div class="right-table">
+                   <div class="big-circle"></div>
+                   <div class="small-circle"></div>
+                   <div class="title">
+                       <p>ADVANCE PLAN</p>
+                   </div>
+                   <div class="price-circle">
+                       <p class="price">211<span>00</span></p>
+                       <p class="time">PLN/MSC</p>
+                   </div>
+                   <div class="list">
+                       <ul class="options">
+                           <li>Zakup towaru + dowóz</li>
+                           <li>Serwis</li>
+                           <li>Gwarancja 5 lat</li>
+                           <li>Porady projektanta</li>
+                       </ul>
+                   </div>
+                   <div class="button-join">
+                       <a href="#" type="submit">dołącz</a>
+                   </div>
+               </div>
+           </div>
+       </div>
    </section>
    <section id="contact">
-
+       <div class="container">
+           <div class="prices-head">
+               <span>Kontakt</span>
+           </div>
+           <form>
+               <div class="left-form">
+                   <input type="text" name="name" placeholder="Imię"/>
+                   <input type="text" name="email" placeholder="email"/>
+                   <textarea name="message" placeholder="Wiadomość"></textarea>
+               </div>
+               <div class="right-form">
+                   <img src="images/red_chair.png" alt="red-chair">
+                   <input type="checkbox" name="checkbox" id="checkbox" />
+                       <label for="checkbox">
+                           <i class="tick"></i>
+                           <span>Zgadzam się na przetwarzanie danych osobowych</span>
+                       </label>
+                   <input type="submit" value="WYŚLIJ" class="btn"/>
+               </div>
+           </form>
+       </div
    </section>
-   <footer></footer>
+   <footer>
+       <div class="container">
+           <div class="footer-left">
+               <p>
+                   Copyright 2014 | All Rights Reserved. - Sit On Chair
+               </p>
+           </div>
+           <div class="footer-middle">
+               <img src="images/flickr.png" alt="flickr_logo">
+               <img src="images/vimeo.png" alt="vimeo_logo">
+               <img src="images/pinterest.png" alt="pinterest_logo">
+               <img src="images/twitter.png" alt="twitter_logo">
+           </div>
+           <div class="footer-right">
+               <p>
+                   SIT <span>ON</span> CHAIR
+               </p>
+           </div>
+       </div>
+   </footer>
 
  </body>
 </html>
